# gaal

./: Cargo.toml  README.md  shell.nix
src/: main.rs
src/gaal_core/: core.rs  mod.rs
src/gaal_core/actions/: mod.rs
src/gaal_core/internals/repository/: default.rs  mod.rs  repository.rs
src/gaal_core/provider/: directory.rs  directory_config.rs  directory_object.rs  mod.rs
src/gaal_core/provider/object/: default.rs  kvlm.rs  mod.rs  tree.rs  write.rs
src/modifier/: data.rs  mod.rs  parser.rs
